# big

./: .editorconfig  .gitattributes  CMakeLists.txt  LICENSE.txt  MANUAL.md  README.md
src/: big.arithmetic.h  big.cache.h  big.expression.h  big.h  big.literals.h  big.negation.h  big.operands.h  big.operations.h  big.options.h  big.powers.h  big.strategy.h  big.utils.h  main.cpp
